--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "update-styling": "./scripts/update-styling.sh"
   },
   "devDependencies": {
+    "@webcomponents/webcomponentsjs": "^2.0.0-0",
     "babel-core": "^6.22.1",
     "babel-loader": "^7.0.0",
     "babel-plugin-transform-object-assign": "^6.8.0",
