--- a/packages/checkbox/package.json
+++ b/packages/checkbox/package.json
@@ -7,7 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
-  "license": "ISC",
+  "license": "Apache-2.0",
   "dependencies": {
     "@material/checkbox": "^0.35.0",
     "@material/mwc-base": "^0.1.0",
