Make sure access config is correct for publishing
Add READMEs to base and icon

--- a/packages/button/package.json
+++ b/packages/button/package.json
@@ -17,5 +17,8 @@
   },
   "devDependencies": {
     "@material/mwc-sass-render": "^0.0.1"
+  },
+  "publishConfig": {
+    "access": "public"
   }
 }
