--- a/packages/base/package.json
+++ b/packages/base/package.json
@@ -9,5 +9,8 @@
   "license": "Apache-2.0",
   "dependencies": {
     "@polymer/lit-element": "^0.4.0"
+  },
+  "publishConfig": {
+    "access": "public"
   }
 }
