--- a/packages/checkbox/package.json
+++ b/packages/checkbox/package.json
@@ -15,5 +15,8 @@
   },
   "devDependencies": {
     "@material/mwc-sass-render": "^0.0.1"
+  },
+  "publishConfig": {
+    "access": "public"
   }
 }
