--- a/packages/icon/package.json
+++ b/packages/icon/package.json
@@ -14,5 +14,8 @@
   },
   "devDependencies": {
     "@material/mwc-sass-render": "^0.0.1"
+  },
+  "publishConfig": {
+    "access": "public"
   }
 }
