--- a/packages/base/package.json
+++ b/packages/base/package.json
@@ -5,7 +5,10 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/material-components/material-components-web-components.git"
+  },
   "license": "Apache-2.0",
   "dependencies": {
     "@polymer/lit-element": "^0.4.0"
