--- a/packages/checkbox/package.json
+++ b/packages/checkbox/package.json
@@ -3,6 +3,10 @@
   "version": "0.1.0",
   "description": "",
   "main": "mwc-checkbox.js",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/material-components/material-components-web-components.git"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
