--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "lint": "npm-run-all --parallel lint:*",
     "test": "karma start --single-run",
     "bootstrap": "npm install && ./scripts/bootstrap-unreleased.sh",
-    "update-styling": "./scripts/update-styling.sh"
+    "update-styling": "./scripts/update-styling.sh",
+    "update-gh-pages": "npm run bootstrap && ./scripts/publish-demos.sh"
   },
   "devDependencies": {
     "@webcomponents/webcomponentsjs": "^2.0.0-0",
@@ -24,11 +25,13 @@
     "babel-loader": "^7.0.0",
     "babel-plugin-transform-object-assign": "^6.8.0",
     "babel-preset-es2015": "^6.9.0",
+    "babel-preset-es2015-rollup": "^3.0.0",
     "babel-traverse": "^6.24.1",
     "babel-types": "^6.24.1",
     "babylon": "^6.16.1",
     "chai": "^4.0.2",
     "del-cli": "^1.1.0",
+    "dom5": "^3.0.0",
     "eslint": "^4.10.0",
     "eslint-config-google": "^0.8.1",
     "eslint-plugin-mocha": "^4.8.0",
@@ -50,7 +53,12 @@
     "lerna": "^2.9.0",
     "mocha": "^5.0.0",
     "npm-run-all": "^4.1.1",
-    "polyserve": "^0.25.3",
+    "parse5": "^4.0.0",
+    "polyserve": "^0.27.10",
+    "rollup": "^0.58.2",
+    "rollup-plugin-babel": "^3.0.4",
+    "rollup-plugin-node-resolve": "^3.3.0",
+    "rollup-plugin-uglify": "^3.0.0",
     "webpack": "^3.9.0",
     "webpack-dev-server": "^2.4.3"
   },
