--- a/packages/dialog/package.json
+++ b/packages/dialog/package.json
@@ -18,5 +18,9 @@
   },
   "devDependencies": {
     "@material/mwc-sass-render": "^0.0.1"
-  }
+  },
+  "publishConfig": {
+    "access": "public"
+  },
+  "private": true
 }
