--- a/packages/select/package.json
+++ b/packages/select/package.json
@@ -17,5 +17,9 @@
   },
   "devDependencies": {
     "@material/mwc-sass-render": "^0.0.1"
-  }
+  },
+  "publishConfig": {
+    "access": "public"
+  },
+  "private": true
 }
