--- a/packages/chips/package.json
+++ b/packages/chips/package.json
@@ -16,5 +16,9 @@
   },
   "devDependencies": {
     "@material/mwc-sass-render": "^0.0.1"
-  }
+  },
+  "publishConfig": {
+    "access": "public"
+  },
+  "private": true
 }
