--- a/packages/linear-progress/package.json
+++ b/packages/linear-progress/package.json
@@ -15,5 +15,9 @@
   },
   "devDependencies": {
     "@material/mwc-sass-render": "^0.0.1"
-  }
+  },
+  "publishConfig": {
+    "access": "public"
+  },
+  "private": true
 }
