--- a/packages/typography/package.json
+++ b/packages/typography/package.json
@@ -15,5 +15,9 @@
   "devDependencies": {
     "@material/mwc-sass-render": "^0.0.1",
     "@material/typography": "^0.35.0"
-  }
+  },
+  "publishConfig": {
+    "access": "public"
+  },
+  "private": true
 }
