--- a/packages/typography/package.json
+++ b/packages/typography/package.json
@@ -9,8 +9,8 @@
   "author": "",
   "license": "Apache-2.0",
   "dependencies": {
-    "@polymer/lit-element": "^0.4.0",
-    "@material/mwc-icon": "^0.1.0"
+    "@material/mwc-icon": "^0.1.0",
+    "@polymer/lit-element": "^0.5.1"
   },
   "devDependencies": {
     "@material/mwc-sass-render": "^0.0.1",
