Update @webcomponents/webcomponentsjs to v2.0.1 (...)
- The elements in these packages depend on @polymer/lit-element@^0.5.2, which
  depend on lit-html@^0.10.0:

  https://github.com/Polymer/lit-element/blob/v0.5.2/package.json#L39
  (7f01cbb07645248b035fd824e5db62dd96bafaf8)

  lit-html@0.10.1 includes changes which make it incompatible with shadycss
  <1.3.0:

  https://github.com/Polymer/lit-html/commit/4dea332e7bc6153e749265323c7df85d4813757e

  webcomponentsjs@2.0.1 is the first to build with shadycss >=1.3.0:

  https://github.com/webcomponents/webcomponentsjs/blob/v2.0.0/package-lock.json#L1293
  (df225f93b54f1944318931b770bc5c6b2d5de98d)

  https://github.com/webcomponents/webcomponentsjs/blob/v2.0.1/package-lock.json#L1287
  (c6a97da5621b2f40fe8046c8dd66febb5b0c8120)

--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "update-gh-pages": "npm run bootstrap && ./scripts/publish-demos.sh"
   },
   "devDependencies": {
-    "@webcomponents/webcomponentsjs": "^2.0.0-0",
+    "@webcomponents/webcomponentsjs": "^2.0.1",
     "babel-core": "^6.22.1",
     "babel-loader": "^7.0.0",
     "babel-plugin-transform-object-assign": "^6.8.0",
