--- a/packages/switch/package.json
+++ b/packages/switch/package.json
@@ -8,17 +8,18 @@
     "url": "https://github.com/material-components/material-components-web-components.git"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "tsc"
   },
   "author": "",
   "license": "Apache-2.0",
   "dependencies": {
     "@material/mwc-base": "^0.1.2",
-    "@polymer/lit-element": "^0.5.2"
+    "@material/switch": "^0.39.0-0",
+    "@polymer/lit-element": "^0.6.0-dev.5"
   },
   "devDependencies": {
-    "@material/mwc-sass-render": "^0.1.2",
-    "@material/switch": "^0.35.0"
+    "typescript": "^3.0.1"
   },
   "publishConfig": {
     "access": "public"
