--- a/packages/ripple/package.json
+++ b/packages/ripple/package.json
@@ -14,11 +14,8 @@
   "license": "Apache-2.0",
   "dependencies": {
     "@material/mwc-base": "^0.1.2",
-    "@material/ripple": "^0.35.0",
-    "@polymer/lit-element": "^0.5.2"
-  },
-  "devDependencies": {
-    "@material/mwc-sass-render": "^0.1.2"
+    "@material/ripple": "^0.38.1",
+    "@polymer/lit-element": "^0.6.0-dev.5"
   },
   "publishConfig": {
     "access": "public"
