--- a/packages/switch/tsconfig.json
+++ b/packages/switch/tsconfig.json
@@ -3,18 +3,21 @@
     "target": "es2017",
     "module": "es2015",
     "moduleResolution": "node",
-    "lib": ["es2017", "dom"],
+    "lib": ["es2017", "dom", "dom.iterable"],
     "declaration": true,
     "sourceMap": true,
     "inlineSources": true,
-    // "strict": true,
+    "strictFunctionTypes": true,
+    "strictNullChecks": true,
+    "strictPropertyInitialization": true,
+    "noImplicitUseStrict": true,
+    "noImplicitThis": true,
     "noUnusedLocals": true,
     "noUnusedParameters": true,
     "noImplicitReturns": true,
     "noFallthroughCasesInSwitch": true,
     "experimentalDecorators": true,
     "skipLibCheck": true,
-    // "allowJs": true,
     "outDir": "./"
   },
   "include": [
