update to lit-element#dev (currently 0.6.0-dev.5); make tests passing and demos/index.html working

--- a/packages/button/package.json
+++ b/packages/button/package.json
@@ -17,7 +17,7 @@
     "@material/mwc-base": "^0.1.2",
     "@material/mwc-icon": "^0.1.2",
     "@material/mwc-ripple": "^0.1.2",
-    "@polymer/lit-element": "^0.5.2"
+    "@polymer/lit-element": "dev"
   },
   "devDependencies": {
     "@material/mwc-sass-render": "^0.1.2"
