--- a/packages/checkbox/package.json
+++ b/packages/checkbox/package.json
@@ -15,7 +15,7 @@
   "dependencies": {
     "@material/checkbox": "^0.35.0",
     "@material/mwc-base": "^0.1.2",
-    "@polymer/lit-element": "^0.5.2"
+    "@polymer/lit-element": "dev"
   },
   "devDependencies": {
     "@material/mwc-sass-render": "^0.1.2"
