--- a/packages/list/package.json
+++ b/packages/list/package.json
@@ -11,7 +11,7 @@
   "dependencies": {
     "@material/list": "^0.35.0",
     "@material/mwc-icon": "^0.1.2",
-    "@polymer/lit-element": "^0.5.2"
+    "@polymer/lit-element": "dev"
   },
   "devDependencies": {
     "@material/mwc-sass-render": "^0.1.2"
