--- a/packages/radio/package.json
+++ b/packages/radio/package.json
@@ -15,7 +15,7 @@
   "dependencies": {
     "@material/mwc-base": "^0.1.2",
     "@material/radio": "^0.35.0",
-    "@polymer/lit-element": "^0.5.2"
+    "@polymer/lit-element": "dev"
   },
   "devDependencies": {
     "@material/mwc-sass-render": "^0.1.2"
