--- a/packages/select/package.json
+++ b/packages/select/package.json
@@ -13,7 +13,7 @@
     "@material/mwc-list": "^0.1.2",
     "@material/mwc-menu": "^0.1.2",
     "@material/select": "^0.35.0",
-    "@polymer/lit-element": "^0.5.2"
+    "@polymer/lit-element": "dev"
   },
   "devDependencies": {
     "@material/mwc-sass-render": "^0.1.2"
