--- a/packages/snackbar/package.json
+++ b/packages/snackbar/package.json
@@ -11,7 +11,7 @@
   "dependencies": {
     "@material/mwc-base": "^0.1.2",
     "@material/snackbar": "^0.35.0",
-    "@polymer/lit-element": "^0.5.2"
+    "@polymer/lit-element": "dev"
   },
   "devDependencies": {
     "@material/mwc-sass-render": "^0.1.2"
