--- a/packages/base/package.json
+++ b/packages/base/package.json
@@ -11,7 +11,7 @@
   },
   "license": "Apache-2.0",
   "dependencies": {
-    "@polymer/lit-element": "dev"
+    "@polymer/lit-element": "^0.6.0"
   },
   "publishConfig": {
     "access": "public"
