--- a/packages/dialog/package.json
+++ b/packages/dialog/package.json
@@ -12,7 +12,7 @@
     "@material/dialog": "^0.35.0",
     "@material/mwc-base": "^0.1.2",
     "@material/mwc-button": "^0.1.2",
-    "@polymer/lit-element": "dev",
+    "@polymer/lit-element": "^0.6.0",
     "blocking-elements": "^0.0.2",
     "wicg-inert": "^1.1.6"
   },
