--- a/packages/fab/package.json
+++ b/packages/fab/package.json
@@ -17,7 +17,7 @@
     "@material/mwc-base": "^0.1.2",
     "@material/mwc-icon": "^0.1.2",
     "@material/mwc-ripple": "^0.1.2",
-    "@polymer/lit-element": "dev"
+    "@polymer/lit-element": "^0.6.0"
   },
   "devDependencies": {
     "@material/mwc-sass-render": "^0.1.2"
