--- a/packages/formfield/package.json
+++ b/packages/formfield/package.json
@@ -11,7 +11,7 @@
   "dependencies": {
     "@material/form-field": "^0.35.0",
     "@material/mwc-base": "^0.1.2",
-    "@polymer/lit-element": "dev"
+    "@polymer/lit-element": "^0.6.0"
   },
   "devDependencies": {
     "@material/mwc-sass-render": "^0.1.2"
