--- a/packages/ripple/package.json
+++ b/packages/ripple/package.json
@@ -15,7 +15,7 @@
   "dependencies": {
     "@material/mwc-base": "^0.1.2",
     "@material/ripple": "^0.35.0",
-    "@polymer/lit-element": "dev"
+    "@polymer/lit-element": "^0.6.0"
   },
   "devDependencies": {
     "@material/mwc-sass-render": "^0.1.2"
