Update drawer to latest MDC

--- a/packages/drawer/package.json
+++ b/packages/drawer/package.json
@@ -16,7 +16,7 @@
   "dependencies": {
     "@material/mwc-base": "^0.1.2",
     "@material/drawer": "^0.39.0-0",
-    "@polymer/lit-element": "^0.6.0-dev.5"
+    "@polymer/lit-element": "^0.6.0"
   },
   "devDependencies": {
     "typescript": "^3.0.1"
