First crazy attempt at typescript conversion
Look at switch and base packages

Move sass building into scripts

--- a/lerna.json
+++ b/lerna.json
@@ -3,5 +3,10 @@
   "packages": [
     "packages/*"
   ],
+  "command": {
+    "bootstrap": {
+      "npmClientArgs": ["--no-package-lock"]
+    }
+  },
   "version": "0.2.0"
 }
