--- a/packages/switch/package.json
+++ b/packages/switch/package.json
@@ -8,7 +8,10 @@
     "url": "https://github.com/material-components/material-components-web-components.git"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build:styles": "../../scripts/sass-render/bin/sass-render.js -t ../../sass-template.tmpl -s src/mwc-switch.scss -o src/mwc-switch-css.ts",
+    "build:src": "tsc",
+    "build": "npm run build:styles && npm run build:src"
   },
   "author": "",
   "license": "Apache-2.0",
@@ -17,8 +20,7 @@
     "@polymer/lit-element": "^0.6.0"
   },
   "devDependencies": {
-    "@material/mwc-sass-render": "^0.1.2",
-    "@material/switch": "^0.35.0"
+    "@material/switch": "^0.39.3"
   },
   "publishConfig": {
     "access": "public"
