--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,9 @@ node_modules
 .DS_Store
 /lerna-debug.log
 /gh-pages
+/packages/*/*.js
+/packages/*/*.js.map
+/packages/*/*.d.ts
+/packages/*/src/*-css.ts
+/packages/*/package-lock.json
+!packages/*/custom_types/**
