--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "lint": "npm-run-all --parallel lint:*",
     "test": "karma start --single-run",
     "bootstrap": "npm install && ./scripts/bootstrap-unreleased.sh",
+    "build": "tsc -b packages/base packages/switch",
     "update-styling": "./scripts/update-styling.sh",
     "update-gh-pages": "npm run bootstrap && ./scripts/publish-demos.sh"
   },
@@ -28,6 +29,8 @@
     "babel-types": "^6.24.1",
     "babylon": "^6.16.1",
     "chai": "^4.0.2",
+    "command-line-args": "^5.0.2",
+    "command-line-usage": "^5.0.5",
     "del-cli": "^1.1.0",
     "dom5": "^3.0.0",
     "eslint": "^4.10.0",
@@ -50,6 +53,8 @@
     "karma-webpack": "^2.0.4",
     "lerna": "^2.9.0",
     "mocha": "^5.0.0",
+    "node-sass": "^4.9.3",
+    "node-sass-import": "^2.0.1",
     "npm-run-all": "^4.1.1",
     "parse5": "^4.0.0",
     "polyserve": "^0.27.10",
@@ -57,6 +62,7 @@
     "rollup-plugin-babel": "^3.0.4",
     "rollup-plugin-node-resolve": "^3.3.0",
     "rollup-plugin-uglify": "^3.0.0",
+    "typescript": "^3.0.3",
     "webpack": "^3.9.0",
     "webpack-dev-server": "^2.4.3"
   },
