--- a/packages/card/package.json
+++ b/packages/card/package.json
@@ -12,8 +12,7 @@
     "@polymer/lit-element": "^0.6.0"
   },
   "devDependencies": {
-    "@material/card": "^0.35.0",
-    "@material/mwc-sass-render": "^0.1.2"
+    "@material/card": "^0.35.0"
   },
   "publishConfig": {
     "access": "public"
