Add ripple directive.

--- a/packages/ripple/package.json
+++ b/packages/ripple/package.json
@@ -16,7 +16,8 @@
   "dependencies": {
     "@material/mwc-base": "^0.1.2",
     "@material/ripple": "^0.38.1",
-    "@polymer/lit-element": "^0.6.0-dev.5"
+    "@polymer/lit-element": "^0.6.0-dev.5",
+    "@polymer/lit-html": "^0.11.4"
   },
   "publishConfig": {
     "access": "public"
