--- a/packages/tab-bar/package.json
+++ b/packages/tab-bar/package.json
@@ -15,6 +15,8 @@
   "license": "Apache-2.0",
   "dependencies": {
     "@material/mwc-base": "^0.1.2",
+    "@material/mwc-tab-scroller": "^0.1.2",
+    "@material/mwc-tab": "^0.1.2",
     "@material/tab-bar": "^0.39.0-0",
     "@polymer/lit-element": "^0.6.0"
   },
