--- a/packages/tab/package.json
+++ b/packages/tab/package.json
@@ -15,6 +15,7 @@
   "license": "Apache-2.0",
   "dependencies": {
     "@material/mwc-base": "^0.1.2",
+    "@material/mwc-ripple": "^0.1.2",
     "@material/tab": "^0.39.0-0",
     "@polymer/lit-element": "^0.6.0"
   },
