--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,17 +7,14 @@
     "declaration": true,
     "sourceMap": true,
     "inlineSources": true,
-    "strictFunctionTypes": true,
-    "strictNullChecks": true,
-    "strictPropertyInitialization": true,
-    "noImplicitUseStrict": true,
-    "noImplicitThis": true,
     "noUnusedLocals": true,
     "noUnusedParameters": true,
     "noImplicitReturns": true,
     "noFallthroughCasesInSwitch": true,
     "experimentalDecorators": true,
     "skipLibCheck": true,
+    "strict": true,
+    "noImplicitAny": false,
     "outDir": "./",
     "baseUrl": "./packages",
     "paths": {
