--- a/packages/drawer/tsconfig.json
+++ b/packages/drawer/tsconfig.json
@@ -1,25 +1,10 @@
 {
+  "extends": "../../tsconfig.json",
   "compilerOptions": {
-    "target": "es2017",
-    "module": "es2015",
-    "moduleResolution": "node",
-    "lib": ["es2017", "dom"],
-    "declaration": true,
-    "sourceMap": true,
-    "inlineSources": true,
-    // "strict": true,
-    "noUnusedLocals": true,
-    "noUnusedParameters": true,
-    "noImplicitReturns": true,
-    "noFallthroughCasesInSwitch": true,
-    "experimentalDecorators": true,
-    "skipLibCheck": true,
-    // "allowJs": true,
-    "outDir": "./"
+    "rootDir": "src",
+    "outDir": "."
   },
   "include": [
-    "custom_typings/**/*.ts",
     "src/*.ts"
-  ],
-  "exclude": []
+  ]
 }
