--- a/packages/radio/package.json
+++ b/packages/radio/package.json
@@ -14,11 +14,11 @@
   "license": "Apache-2.0",
   "dependencies": {
     "@material/mwc-base": "^0.2.0",
-    "@material/radio": "^0.35.0",
+    "@material/mwc-ripple": "^0.2.0",
+    "@material/radio": "^0.39.3",
     "@polymer/lit-element": "^0.6.0"
   },
-  "devDependencies": {
-  },
+  "devDependencies": {},
   "publishConfig": {
     "access": "public"
   }
