--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "build": "npm run build-styling && tsc -b packages/base packages/switch packages/ripple packages/button packages/fab packages/icon packages/checkbox",
     "build-styling": "./scripts/build-styling.sh",
     "update-gh-pages": "npm run bootstrap && ./scripts/publish-demos.sh",
-    "watch": "node scripts/watcher.js"
+    "watch": "npm run build && node scripts/watcher.js"
   },
   "devDependencies": {
     "@webcomponents/webcomponentsjs": "^2.0.1",
@@ -56,6 +56,7 @@
     "mocha": "^5.0.0",
     "node-sass": "^4.9.3",
     "node-sass-import": "^2.0.1",
+    "node-watch": "^0.5.8",
     "npm-run-all": "^4.1.1",
     "parse5": "^4.0.0",
     "polyserve": "^0.27.10",
