--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "babel-traverse": "^6.24.1",
     "babel-types": "^6.24.1",
     "babylon": "^6.16.1",
-    "chai": "^4.0.2",
+    "chai": "^4.2.0",
     "command-line-args": "^5.0.2",
     "command-line-usage": "^5.0.5",
     "del-cli": "^1.1.0",
@@ -55,7 +55,6 @@
     "karma-webpack": "^2.0.4",
     "lerna": "^2.9.0",
     "mocha": "^5.0.0",
-    "node-sass": "^4.9.3",
     "node-sass-import": "^2.0.1",
     "node-watch": "^0.5.8",
     "npm-run-all": "^4.1.1",
@@ -65,7 +64,8 @@
     "rollup-plugin-babel": "^3.0.4",
     "rollup-plugin-node-resolve": "^3.3.0",
     "rollup-plugin-uglify": "^3.0.0",
-    "typescript": "^3.0.3",
+    "sass": "^1.14.1",
+    "typescript": "^3.1.1",
     "webpack": "^3.9.0",
     "webpack-dev-server": "^2.4.3"
   },
