--- a/packages/switch/package.json
+++ b/packages/switch/package.json
@@ -11,6 +11,7 @@
   "license": "Apache-2.0",
   "dependencies": {
     "@material/mwc-base": "^0.2.0",
+    "@material/mwc-ripple": "^0.2.0",
     "@material/switch": "^0.40.0",
     "@polymer/lit-element": "^0.6.1"
   },
