Update to lit-element 0.6.2
Also make explicit dependencies on lit-html where needed

Fixes #132

--- a/packages/button/package.json
+++ b/packages/button/package.json
@@ -17,7 +17,8 @@
     "@material/mwc-base": "^0.3.0",
     "@material/mwc-icon": "^0.3.0",
     "@material/mwc-ripple": "^0.3.0",
-    "@polymer/lit-element": "^0.6.1"
+    "@polymer/lit-element": "^0.6.2",
+    "lit-html": "^0.12.0"
   },
   "publishConfig": {
     "access": "public"
