--- a/packages/base/package.json
+++ b/packages/base/package.json
@@ -8,7 +8,8 @@
   },
   "license": "Apache-2.0",
   "dependencies": {
-    "@polymer/lit-element": "^0.6.1"
+    "@polymer/lit-element": "^0.6.2",
+    "lit-html": "^0.12.0"
   },
   "publishConfig": {
     "access": "public"
