--- a/packages/top-app-bar/package.json
+++ b/packages/top-app-bar/package.json
@@ -16,7 +16,8 @@
   "dependencies": {
     "@material/mwc-base": "^0.3.0",
     "@material/top-app-bar": "^0.40.0",
-    "@polymer/lit-element": "^0.6.1"
+    "@polymer/lit-element": "^0.6.2",
+    "lit-html": "^0.12.0"
   },
   "publishConfig": {
     "access": "public"
