--- a/packages/icon-button/package.json
+++ b/packages/icon-button/package.json
@@ -1,18 +1,18 @@
 {
-  "name": "@material/mwc-icon-toggle",
+  "name": "@material/mwc-icon-button",
   "version": "0.3.1",
   "description": "",
-  "main": "mwc-icon-toggle.js",
+  "main": "mwc-icon-button.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "Apache-2.0",
   "dependencies": {
-    "@material/icon-toggle": "^0.35.0",
+    "@material/icon-button": "^0.40.0",
     "@material/mwc-base": "^0.3.1",
     "@material/mwc-icon": "^0.3.1",
-    "@polymer/lit-element": "^0.6.2"
+    "@material/mwc-ripple": "^0.3.1"
   },
   "publishConfig": {
     "access": "public"
