--- a/packages/drawer/package.json
+++ b/packages/drawer/package.json
@@ -16,8 +16,8 @@
   "dependencies": {
     "@material/drawer": "^0.40.0",
     "@material/mwc-base": "^0.3.3",
-    "@polymer/lit-element": "^0.6.4",
-    "lit-html": "^0.14.0"
+    "@polymer/lit-element": "^0.6.5",
+    "lit-html": "^1.0.0-rc.1"
   },
   "publishConfig": {
     "access": "public"
