--- a/packages/base/package.json
+++ b/packages/base/package.json
@@ -8,8 +8,8 @@
   },
   "license": "Apache-2.0",
   "dependencies": {
-    "@polymer/lit-element": "^0.6.4",
-    "lit-html": "^0.14.0"
+    "@polymer/lit-element": "^0.6.5",
+    "lit-html": "^1.0.0-rc.1"
   },
   "publishConfig": {
     "access": "public"
