--- a/packages/ripple/package.json
+++ b/packages/ripple/package.json
@@ -15,8 +15,8 @@
   "dependencies": {
     "@material/mwc-base": "^0.3.3",
     "@material/ripple": "^0.40.0",
-    "@polymer/lit-element": "^0.6.4",
-    "lit-html": "^0.14.0"
+    "@polymer/lit-element": "^0.6.5",
+    "lit-html": "^1.0.0-rc.1"
   },
   "publishConfig": {
     "access": "public"
