--- a/packages/tab/package.json
+++ b/packages/tab/package.json
@@ -19,8 +19,8 @@
     "@material/mwc-ripple": "^0.3.3",
     "@material/mwc-tab-indicator": "^0.3.3",
     "@material/tab": "^0.40.0",
-    "@polymer/lit-element": "^0.6.4",
-    "lit-html": "^0.14.0"
+    "@polymer/lit-element": "^0.6.5",
+    "lit-html": "^1.0.0-rc.1"
   },
   "publishConfig": {
     "access": "public"
