Update lit-html and lit-element dependencies
- lit-html 1.0.0-rc.2
- lit-element 2.0.0-rc.2

--- a/packages/checkbox/package.json
+++ b/packages/checkbox/package.json
@@ -16,7 +16,7 @@
     "@material/checkbox": "^0.40.0",
     "@material/mwc-base": "^0.3.4",
     "@material/mwc-ripple": "^0.3.4",
-    "@polymer/lit-element": "^0.6.5"
+    "lit-element": "^2.0.0-rc.2"
   },
   "publishConfig": {
     "access": "public"
