--- a/packages/linear-progress/package.json
+++ b/packages/linear-progress/package.json
@@ -11,7 +11,7 @@
   "dependencies": {
     "@material/linear-progress": "^0.40.0",
     "@material/mwc-base": "^0.3.4",
-    "@polymer/lit-element": "^0.6.5"
+    "lit-element": "^2.0.0-rc.2"
   },
   "publishConfig": {
     "access": "public"
