--- a/packages/switch/package.json
+++ b/packages/switch/package.json
@@ -13,7 +13,7 @@
     "@material/mwc-base": "^0.3.4",
     "@material/mwc-ripple": "^0.3.4",
     "@material/switch": "^0.40.0",
-    "@polymer/lit-element": "^0.6.5"
+    "lit-element": "^2.0.0-rc.2"
   },
   "publishConfig": {
     "access": "public"
