--- a/packages/button/package.json
+++ b/packages/button/package.json
@@ -17,8 +17,8 @@
     "@material/mwc-base": "^0.3.4",
     "@material/mwc-icon": "^0.3.4",
     "@material/mwc-ripple": "^0.3.4",
-    "@polymer/lit-element": "^0.6.5",
-    "lit-html": "^1.0.0-rc.1"
+    "lit-element": "^2.0.0-rc.2",
+    "lit-html": "^1.0.0-rc.2"
   },
   "publishConfig": {
     "access": "public"
