--- a/packages/icon/package.json
+++ b/packages/icon/package.json
@@ -14,7 +14,7 @@
   "license": "Apache-2.0",
   "dependencies": {
     "@material/mwc-base": "^0.3.4",
-    "@polymer/lit-element": "^0.6.5"
+    "lit-element": "^2.0.0-rc.2"
   },
   "publishConfig": {
     "access": "public"
