--- a/packages/list/package.json
+++ b/packages/list/package.json
@@ -11,7 +11,7 @@
   "dependencies": {
     "@material/list": "^0.35.0",
     "@material/mwc-icon": "^0.3.4",
-    "@polymer/lit-element": "^0.6.5"
+    "lit-element": "^2.0.0-rc.2"
   },
   "publishConfig": {
     "access": "public"
