--- a/packages/menu/package.json
+++ b/packages/menu/package.json
@@ -12,7 +12,7 @@
     "@material/menu": "^0.35.0",
     "@material/mwc-base": "^0.3.4",
     "@material/mwc-list": "^0.3.4",
-    "@polymer/lit-element": "^0.6.5"
+    "lit-element": "^2.0.0-rc.2"
   },
   "devDependencies": {
     "@material/typography": "^0.35.0"
