--- a/packages/radio/package.json
+++ b/packages/radio/package.json
@@ -16,7 +16,7 @@
     "@material/mwc-base": "^0.3.4",
     "@material/mwc-ripple": "^0.3.4",
     "@material/radio": "^0.40.0",
-    "@polymer/lit-element": "^0.6.5"
+    "lit-element": "^2.0.0-rc.2"
   },
   "publishConfig": {
     "access": "public"
