--- a/packages/select/package.json
+++ b/packages/select/package.json
@@ -13,7 +13,7 @@
     "@material/mwc-list": "^0.3.4",
     "@material/mwc-menu": "^0.3.4",
     "@material/select": "^0.35.0",
-    "@polymer/lit-element": "^0.6.5"
+    "lit-element": "^2.0.0-rc.2"
   },
   "publishConfig": {
     "access": "public"
