--- a/packages/tab-indicator/package.json
+++ b/packages/tab-indicator/package.json
@@ -16,8 +16,8 @@
   "dependencies": {
     "@material/mwc-base": "^0.3.4",
     "@material/tab-indicator": "^0.40.0",
-    "@polymer/lit-element": "^0.6.5",
-    "lit-html": "^1.0.0-rc.1"
+    "lit-element": "^2.0.0-rc.2",
+    "lit-html": "^1.0.0-rc.2"
   },
   "publishConfig": {
     "access": "public"
