--- a/packages/tab-scroller/package.json
+++ b/packages/tab-scroller/package.json
@@ -16,7 +16,7 @@
   "dependencies": {
     "@material/mwc-base": "^0.3.4",
     "@material/tab-scroller": "^0.40.0",
-    "@polymer/lit-element": "^0.6.5"
+    "lit-element": "^2.0.0-rc.2"
   },
   "publishConfig": {
     "access": "public"
