--- a/packages/tab/package.json
+++ b/packages/tab/package.json
@@ -19,8 +19,8 @@
     "@material/mwc-ripple": "^0.3.4",
     "@material/mwc-tab-indicator": "^0.3.4",
     "@material/tab": "^0.40.0",
-    "@polymer/lit-element": "^0.6.5",
-    "lit-html": "^1.0.0-rc.1"
+    "lit-element": "^2.0.0-rc.2",
+    "lit-html": "^1.0.0-rc.2"
   },
   "publishConfig": {
     "access": "public"
