--- a/packages/textfield/package.json
+++ b/packages/textfield/package.json
@@ -12,7 +12,7 @@
     "@material/mwc-base": "^0.3.4",
     "@material/mwc-icon": "^0.3.4",
     "@material/textfield": "^0.35.0",
-    "@polymer/lit-element": "^0.6.5"
+    "lit-element": "^2.0.0-rc.2"
   },
   "publishConfig": {
     "access": "public"
