Minimize direct imports of lit-html and lit-element
mwc-base exports everything needed by the majority of elements.

This will reduce maintenance on updating lit versions.

--- a/packages/radio/package.json
+++ b/packages/radio/package.json
@@ -15,8 +15,7 @@
   "dependencies": {
     "@material/mwc-base": "^0.3.5",
     "@material/mwc-ripple": "^0.3.5",
-    "@material/radio": "^0.40.0",
-    "lit-element": "^2.0.0-rc.2"
+    "@material/radio": "^0.40.0"
   },
   "publishConfig": {
     "access": "public"
