--- a/packages/tab-bar/package.json
+++ b/packages/tab-bar/package.json
@@ -17,8 +17,7 @@
     "@material/mwc-base": "^0.3.5",
     "@material/mwc-tab": "^0.3.5",
     "@material/mwc-tab-scroller": "^0.3.5",
-    "@material/tab-bar": "^0.40.0",
-    "lit-element": "^2.0.0-rc.2"
+    "@material/tab-bar": "^0.40.0"
   },
   "publishConfig": {
     "access": "public"
