--- a/packages/checkbox/package.json
+++ b/packages/checkbox/package.json
@@ -15,8 +15,7 @@
   "dependencies": {
     "@material/checkbox": "^0.40.0",
     "@material/mwc-base": "^0.3.5",
-    "@material/mwc-ripple": "^0.3.5",
-    "lit-element": "^2.0.0-rc.2"
+    "@material/mwc-ripple": "^0.3.5"
   },
   "publishConfig": {
     "access": "public"
