--- a/packages/fab/package.json
+++ b/packages/fab/package.json
@@ -16,9 +16,7 @@
     "@material/fab": "^0.40.0",
     "@material/mwc-base": "^0.3.5",
     "@material/mwc-icon": "^0.3.5",
-    "@material/mwc-ripple": "^0.3.5",
-    "lit-element": "^2.0.0-rc.2",
-    "lit-html": "^1.0.0-rc.2"
+    "@material/mwc-ripple": "^0.3.5"
   },
   "publishConfig": {
     "access": "public"
