--- a/packages/icon/package.json
+++ b/packages/icon/package.json
@@ -13,8 +13,7 @@
   "author": "",
   "license": "Apache-2.0",
   "dependencies": {
-    "@material/mwc-base": "^0.3.5",
-    "lit-element": "^2.0.0-rc.2"
+    "@material/mwc-base": "^0.3.5"
   },
   "publishConfig": {
     "access": "public"
