--- a/packages/linear-progress/package.json
+++ b/packages/linear-progress/package.json
@@ -10,8 +10,7 @@
   "license": "Apache-2.0",
   "dependencies": {
     "@material/linear-progress": "^0.40.0",
-    "@material/mwc-base": "^0.3.5",
-    "lit-element": "^2.0.0-rc.2"
+    "@material/mwc-base": "^0.3.5"
   },
   "publishConfig": {
     "access": "public"
