--- a/packages/tab-scroller/package.json
+++ b/packages/tab-scroller/package.json
@@ -15,8 +15,7 @@
   "license": "Apache-2.0",
   "dependencies": {
     "@material/mwc-base": "^0.3.5",
-    "@material/tab-scroller": "^0.40.0",
-    "lit-element": "^2.0.0-rc.2"
+    "@material/tab-scroller": "^0.40.0"
   },
   "publishConfig": {
     "access": "public"
