--- a/packages/top-app-bar/package.json
+++ b/packages/top-app-bar/package.json
@@ -15,9 +15,7 @@
   "license": "Apache-2.0",
   "dependencies": {
     "@material/mwc-base": "^0.3.5",
-    "@material/top-app-bar": "^0.40.0",
-    "lit-element": "^2.0.0-rc.2",
-    "lit-html": "^1.0.0-rc.2"
+    "@material/top-app-bar": "^0.40.0"
   },
   "publishConfig": {
     "access": "public"
