Fix typescript building
- Add back-references to dependencies for `tsc --build` to work
- Normalize on `build:typescript` syntax
- make `clean` work

--- a/package.json
+++ b/package.json
@@ -4,14 +4,16 @@
   "description": "Material Components Web Components",
   "license": "Apache-2.0",
   "scripts": {
-    "clean": "del-cli build/** build .closure-tmp/** .closure-tmp packages/*/node_modules packages/*/package-lock.json",
+    "clean": "del-cli packages/*/node_modules packages/*/package-lock.json && npm run clean:typescript && npm run clean:styles",
+    "clean:typescript": "npm run build:typescript -- --clean",
+    "clean:styles": "del-cli packages/*/src/*-css.ts",
     "dev": "polyserve --npm --module-resolution=node",
     "lint:imports": "node scripts/check-imports.js",
     "test": "karma start --single-run",
     "bootstrap": "npm install && ./scripts/bootstrap.sh && npm run build",
-    "build": "npm run build-styling && npm run build-typescript",
-    "build-styling": "./scripts/build-styling.sh",
-    "build-typescript": "tsc -b --verbose packages/**/tsconfig.json",
+    "build": "npm run build:styling && npm run build:typescript -- --verbose",
+    "build:styling": "./scripts/build-styling.sh",
+    "build:typescript": "tsc --build packages/**/tsconfig.json",
     "update-gh-pages": "npm run bootstrap && ./scripts/publish-demos.sh",
     "watch": "npm run bootstrap && node scripts/watcher.js"
   },
