--- a/package.json
+++ b/package.json
@@ -36,8 +36,10 @@
     "karma-chrome-launcher": "^2.0.0",
     "karma-firefox-launcher": "^1.0.0",
     "karma-mocha": "^1.3.0",
+    "karma-mocha-reporter": "^2.2.5",
     "karma-rollup-preprocessor": "^6.1.2",
     "karma-sauce-launcher": "^2.0.2",
+    "karma-sourcemap-loader": "^0.3.7",
     "lerna": "^2.9.0",
     "mocha": "^5.0.0",
     "node-sass-import": "^2.0.1",
