--- a/packages/card/package.json
+++ b/packages/card/package.json
@@ -9,7 +9,7 @@
   "author": "",
   "license": "Apache-2.0",
   "dependencies": {
-    "lit-element": "^2.0.0-rc.2"
+    "lit-element": "^2.0.1"
   },
   "devDependencies": {
     "@material/card": "^0.35.0"
