--- a/packages/menu/package.json
+++ b/packages/menu/package.json
@@ -12,7 +12,7 @@
     "@material/menu": "^0.35.0",
     "@material/mwc-base": "^0.3.5",
     "@material/mwc-list": "^0.3.5",
-    "lit-element": "^2.0.0-rc.2"
+    "lit-element": "^2.0.1"
   },
   "devDependencies": {
     "@material/typography": "^0.35.0"
