--- a/packages/select/package.json
+++ b/packages/select/package.json
@@ -13,7 +13,7 @@
     "@material/mwc-list": "^0.3.5",
     "@material/mwc-menu": "^0.3.5",
     "@material/select": "^0.35.0",
-    "lit-element": "^2.0.0-rc.2"
+    "lit-element": "^2.0.1"
   },
   "publishConfig": {
     "access": "public"
