--- a/packages/typography/package.json
+++ b/packages/typography/package.json
@@ -10,7 +10,7 @@
   "license": "Apache-2.0",
   "dependencies": {
     "@material/mwc-icon": "^0.3.5",
-    "lit-element": "^2.0.0-rc.2"
+    "lit-element": "^2.0.1"
   },
   "devDependencies": {
     "@material/typography": "^0.35.0"
