--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "rollup-plugin-babel": "^3.0.4",
     "rollup-plugin-node-resolve": "^4.0.0",
     "sass": "^1.16.1",
+    "sinon": "^7.3.1",
     "typescript": "^3.2.4"
   },
   "babel": {
