--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "clean:styles": "del-cli packages/*/src/*-css.ts",
     "dev": "polyserve --npm --module-resolution=node",
     "lint:imports": "node scripts/check-imports.js",
+    "lint:typescript": "eslint \"packages/**/*.ts\"",
     "test": "karma start --single-run",
     "test:bench": "node test/benchmark/cli.js",
     "bootstrap": "npm install && ./scripts/bootstrap.sh && npm run build",
@@ -23,6 +24,8 @@
   "devDependencies": {
     "@types/command-line-args": "^5.0.0",
     "@types/command-line-usage": "^5.0.1",
+    "@typescript-eslint/eslint-plugin": "^1.7.0",
+    "@typescript-eslint/parser": "^1.7.0",
     "@webcomponents/webcomponentsjs": "^2.2.8",
     "babel-core": "^6.22.1",
     "babel-plugin-transform-object-assign": "^6.8.0",
@@ -35,6 +38,9 @@
     "command-line-usage": "^5.0.5",
     "del-cli": "^1.1.0",
     "dom5": "^3.0.0",
+    "eslint": "^5.16.0",
+    "eslint-config-google": "^0.12.0",
+    "eslint-plugin-mocha": "^5.3.0",
     "glob": "^7.1.1",
     "karma": "^4.0.1",
     "karma-chai": "^0.1.0",
