--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "eslint": "^5.16.0",
     "eslint-config-google": "^0.12.0",
     "eslint-plugin-mocha": "^5.3.0",
+    "eslint-plugin-wc": "^1.1.0",
     "glob": "^7.1.1",
     "karma": "^4.0.1",
     "karma-chai": "^0.1.0",
