introduce clang-format

--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "clean:typescript": "npm run build:typescript -- --clean",
     "clean:styles": "del-cli packages/*/src/*-css.ts",
     "dev": "polyserve --npm --module-resolution=node",
+    "format": "clang-format --version; find packages | grep '\\.js$\\|\\.ts$' | xargs clang-format --style=file -i",
     "lint:imports": "node scripts/check-imports.js",
     "lint": "npm run lint:typescript",
     "lint:typescript": "eslint \"packages/**/*.ts\"",
@@ -35,6 +36,7 @@
     "babel-traverse": "^6.24.1",
     "babylon": "^6.16.1",
     "chai": "^4.2.0",
+    "clang-format": "^1.2.4",
     "command-line-args": "^5.1.1",
     "command-line-usage": "^5.0.5",
     "del-cli": "^1.1.0",
