--- a/.eslintrc.yaml
+++ b/.eslintrc.yaml
@@ -14,7 +14,7 @@ parserOptions:
   ecmaVersion: 2017
   sourceType: module
 rules:
-  indent: [warn, 2]
+  indent: off
   max-len: [warn, 120]
   no-new: warn
   quotes: [error, single, {"avoidEscape": true}]
