Add lit-analyzer to linting
- Set up linting in Travis as well

--- a/package.json
+++ b/package.json
@@ -10,8 +10,9 @@
     "dev": "polyserve --npm --module-resolution=node",
     "format": "clang-format --version; find . -name '*.ts' | grep -v node_modules | xargs clang-format -style=file -i",
     "lint:imports": "node scripts/check-imports.js",
-    "lint": "npm run lint:typescript",
+    "lint": "npm run lint:typescript && npm run lint:lit",
     "lint:typescript": "eslint \"packages/**/*.ts\"",
+    "lint:lit": "lit-analyzer \"packages/**/*.ts\" --strict --quiet",
     "test": "karma start --single-run",
     "test:bench": "node test/benchmark/cli.js",
     "bootstrap": "npm install && ./scripts/bootstrap.sh && npm run build",
@@ -56,6 +57,7 @@
     "karma-sauce-launcher": "^2.0.2",
     "karma-sourcemap-loader": "^0.3.7",
     "lerna": "^3.13.1",
+    "lit-analyzer": "^1.1.7",
     "mocha": "^5.0.0",
     "node-sass-import": "^2.0.1",
     "node-watch": "^0.6.0",
