Break out `build` from `bootstrap`
Run format in CI

--- a/package.json
+++ b/package.json
@@ -15,8 +15,8 @@
     "lint:lit": "lit-analyzer \"packages/**/*.ts\" --strict --quiet",
     "test": "karma start --single-run",
     "test:bench": "node test/benchmark/cli.js",
-    "bootstrap": "npm install && ./scripts/bootstrap.sh && npm run build",
-    "build": "npm run lint && npm run build:styling && npm run build:typescript -- --verbose",
+    "bootstrap": "npm install && ./scripts/bootstrap.sh",
+    "build": "npm run build:styling && npm run build:typescript -- --verbose",
     "build:styling": "./scripts/build-styling.sh",
     "build:typescript": "tsc --build packages/**/tsconfig.json",
     "build:tests": "tsc --build test/tsconfig.json && tsc --build test/tsconfig-node.json",
