--- a/packages/textfield/package.json
+++ b/packages/textfield/package.json
@@ -17,7 +17,8 @@
     "@material/mwc-notched-outline": "^0.6.0",
     "@material/textfield": "^3.0.0",
     "@material/shape": "^3.0.0",
-    "@material/theme": "^3.0.0"
+    "@material/theme": "^3.0.0",
+    "lit-html": "^1.0.0"
   },
   "publishConfig": {
     "access": "public"
