fix(infrastructure): use postinstall instead of custom script (#374)

--- a/package.json
+++ b/package.json
@@ -16,13 +16,13 @@
     "lint:lit": "lit-analyzer \"packages/**/*.ts\" --strict --quiet",
     "test": "karma start --single-run",
     "test:bench": "node test/benchmark/cli.js",
-    "bootstrap": "npm install && ./scripts/bootstrap.sh",
+    "postinstall": "./scripts/bootstrap.sh",
     "build": "npm run build:styling && npm run build:typescript -- --verbose",
     "build:styling": "./scripts/build-styling.sh",
     "build:typescript": "tsc --build packages/**/tsconfig.json",
     "build:tests": "tsc --build test/tsconfig.json && tsc --build test/tsconfig-node.json",
     "build:scripts": "tsc --project scripts/tsconfig.json",
-    "update-gh-pages": "npm run bootstrap && ./scripts/publish-demos.sh",
+    "update-gh-pages": "npm install && ./scripts/publish-demos.sh",
     "static-urlify-readme-images": "npm run build:scripts && node scripts/tsc-out/static-urlify-readme-images.js packages/*/README.md",
     "prepack": "npm run build && npm run static-urlify-readme-images",
     "watch": "npm run build && node scripts/watcher.js",
