fix tsconfig build order

--- a/packages/textfield/tsconfig.json
+++ b/packages/textfield/tsconfig.json
@@ -9,7 +9,9 @@
   ],
   "references": [
     {"path": "../base"},
-    {"path": "../ripple"},
-    {"path": "../icon"}
+    {"path": "../line-ripple"},
+    {"path": "../icon"},
+    {"path": "../notched-outline"},
+    {"path": "../floating-label"}
   ]
 }
