--- a/packages/floating-label/tsconfig.json
+++ b/packages/floating-label/tsconfig.json
@@ -9,8 +9,5 @@
   "include": [
     "src/*.ts"
   ],
-  "references": [
-    {"path": "../base"},
-    {"path": "../ripple"}
-  ]
+  "references": []
 }
