--- a/packages/textarea/tsconfig.json
+++ b/packages/textarea/tsconfig.json
@@ -1,15 +1,16 @@
 {
   "extends": "../../tsconfig.json",
   "compilerOptions": {
+    "composite": true,
     "rootDir": "src",
-    "outDir": "."
+    "outDir": ".",
+    "tsBuildInfoFile": ".tsbuildinfo"
   },
   "include": [
     "src/**/*.ts"
   ],
   "references": [
     {"path": "../base"},
-    {"path": "../ripple"},
-    {"path": "../icon"}
+    {"path": "../textfield"}
   ]
 }
