Fall back to msMatchesSelector in findAssignedElement util (#396)
* Fall back to msMatchesSelector in findAssignedElement util
* Add explicit dependencies on @material/dom

--- a/packages/ripple/package.json
+++ b/packages/ripple/package.json
@@ -14,6 +14,7 @@
   "author": "",
   "license": "Apache-2.0",
   "dependencies": {
+    "@material/dom": "^3.1.0",
     "@material/mwc-base": "^0.6.0",
     "@material/ripple": "^3.0.0",
     "lit-html": "^1.0.0"
