--- a/packages/base/package.json
+++ b/packages/base/package.json
@@ -10,6 +10,7 @@
   "license": "Apache-2.0",
   "dependencies": {
     "@material/base": "^3.0.0",
+    "@material/dom": "^3.1.0",
     "lit-element": "^2.2.1",
     "lit-html": "^1.0.0"
   },
