--- a/packages/tab-scroller/package.json
+++ b/packages/tab-scroller/package.json
@@ -15,6 +15,7 @@
   "author": "",
   "license": "Apache-2.0",
   "dependencies": {
+    "@material/dom": "^3.1.0",
     "@material/mwc-base": "^0.6.0",
     "@material/tab-scroller": "^3.0.0"
   },
