make sure to build tests before testing

--- a/package.json
+++ b/package.json
@@ -14,9 +14,9 @@
     "lint": "npm run lint:typescript && npm run lint:lit",
     "lint:typescript": "eslint \"packages/**/*.ts\"",
     "lint:lit": "lit-analyzer \"packages/**/*.ts\" --strict --quiet",
-    "test": "karma-proxy start --single-run",
+    "test": "npm run build:tests && karma-proxy start --single-run",
     "test:debug": "npm run test -- --single-run false --browsers Chrome",
-    "test:bench": "node test/lib/benchmark/cli.js",
+    "test:bench": "npm run build:tests && node test/lib/benchmark/cli.js",
     "postinstall": "./scripts/bootstrap.sh",
     "build": "npm run build:styling && npm run build:typescript -- --verbose",
     "build:styling": "./scripts/build-styling.sh",
