Set up new unit test locations for Karma and update package configs.

--- a/packages/button/tsconfig.json
+++ b/packages/button/tsconfig.json
@@ -9,9 +9,18 @@
   "include": [
     "src/*.ts"
   ],
+  "exclude": [
+    "src/test/*.ts"
+  ],
   "references": [
-    {"path": "../base"},
-    {"path": "../ripple"},
-    {"path": "../icon"}
+    {
+      "path": "../base"
+    },
+    {
+      "path": "../ripple"
+    },
+    {
+      "path": "../icon"
+    }
   ]
 }
