--- a/packages/icon-button/tsconfig.json
+++ b/packages/icon-button/tsconfig.json
@@ -10,7 +10,14 @@
     "src/*.ts"
   ],
   "references": [
-    {"path": "../base"},
-    {"path": "../icon"}
+    {
+      "path": "../base"
+    },
+    {
+      "path": "../icon"
+    }
+  ],
+  "exclude": [
+    "src/test/*.ts"
   ]
 }
