Temporarily run on push

--- a/.github/workflows/bump-mdc-deps.yml
+++ b/.github/workflows/bump-mdc-deps.yml
@@ -1,9 +1,10 @@
 name: bump-mdc-deps
 
 on:
-  schedule:
+  push
+  #schedule:
     # Run at 12 AM PST every day.
-    - cron: '0 8 * * *'
+    #- cron: '0 8 * * *'
 
 jobs:
   bump:
